Documenting Endpoints with Swagger
